<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:textSize="15sp"
        android:text="@string/pilih"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/jari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jari"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <EditText
        android:id="@+id/jari2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jari" />

    <TextView
        android:id="@+id/panjang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Panjang"
        app:layout_constraintTop_toBottomOf="@id/jari2"
        app:layout_constraintStart_toStartOf="@id/jari2" />

    <EditText
        android:id="@+id/panjang2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/panjang"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/lebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lebar"
        app:layout_constraintTop_toBottomOf="@id/panjang2"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/lebar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/lebar"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tinggi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tinggi"
        app:layout_constraintTop_toBottomOf="@id/lebar2"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/tinggi2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/tinggi"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="HITUNG"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tinggi2" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="120dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toEndOf="@id/textView"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/hasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hasil"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>